--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
         <header class="cv-header">
             <h1 class="name">MIGUEL ALEJANDRO MAMANI VILLEGAS</h1>
-            <p class="subtitle">Desarrollador de Software / Ingeniero de Software</p>
+            <p class="subtitle">Desarrollador de Software</p>
             <p class="id-line">C.I.: 4013640 CB · Nacionalidad: Boliviano · Estado civil: Soltero</p>
             <div class="actions">
                 <button class="btn" onclick="window.print()">Imprimir / Guardar en PDF</button>
