update styles.css main index.html response

--- a/index.html
+++ b/index.html
@@ -298,8 +298,15 @@
             </section>
         </main>
 
-        
+        <footer class="card" id="contacto" role="contentinfo" aria-label="Información de contacto">
+            <h2>Contacto</h2>
+            <p>¿Te interesa mi perfil? Escríbeme a <a
+                    href="mailto:miguel.ale19934@gmail.com">miguel.ale19934@gmail.com</a> o llámame al <a
+                    href="tel:+59160714966">60714966</a>.</p>
+        </footer>
     </div>
+
+    <noscript>Esta página funciona sin JavaScript, pero habilitarlo mejora la experiencia de impresión.</noscript>
 </body>
 
 </html>
